deploy/staging/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lms-frontend
  namespace: staging
  labels:
    app: lms-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: lms-frontend
